         confirm-actions option. Fix dashes (Sergio).
20121227 configure.ac: bump version number to 1.1.0 (Fred).
20121227 ChangeLog,README: first updates for a "1.1.0" release (Fred).
20121227 man/fuse.1: fix spelling, capitalisation, dashes, quotes and
         whitespace (Stuart).
20121228 man/fuse.1: fix whitespace and grammar issues (Stuart).
20121228 man/fuse.1: make better use of named glyphs (Stuart).
20121228 man/fuse.1: remove trailing spaces (Stuart).
20121228 compat/unix/socket.c,tape.c,unittests.c: fix warnings.
20121228 man/fuse.1: whitespace and italics fixes (Stuart).
20121228 man/fuse.1: add missing 'SpecDrum volume' section (Stuart).
20121228 man/fuse.1: restore spacing between synopsis and description and
         use default paragraph spacing for the entire man page (Stuart).
20121228 man/fuse.1: use 'tbl' syntax for example of Spectranet current
         configuration screen (Stuart).
20121229 unittests/unittests.c: make unit tests pass for 16K and Timex
         machines.
20121229 man/fuse.1: whitespace and punctuation fixes (Stuart).
20121230 man/fuse.1: use bold font for command line option names (Stuart).
20121230 compat/unix/socket.c: don't ignore the return code from read().
20121230 man/fuse.1: formatting fixes (Stuart).
20121230 man/fuse.1: fix typo (Fred).
20121230 man/fuse.1: fix typo (thanks, Fred) (Stuart).
20121230 man/fuse.1: use conformant and more consistent syntax (Stuart).
20121231 AUTHORS,README,THANKS,fuse.c,man/fuse.1,menu.[ch],menu_data.dat,
         peripherals/if[12].[ch],ui.c,ui/options.dat: rename 'Interface I' and
         'Interface II' to 'Interface 1' and 'Interface 2' (Stuart).
20121231 man/fuse.1: use non-breaking spaces where appropriate (Stuart).
20130101 man/fuse.1: fix text in SPECTRANET EMULATION section (Fred).
20130102 menu.c,menu_data.dat,settings.{dat,pl}: fix command line options and
	 add menu items for Opus Discovery and DISCiPLE ROM selection (Stuart).